--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test"
+      "pre-commit": "lint-staged && npm run test"
     }
   },
   "lint-staged": {
